--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -37,5 +37,17 @@
     <script>
     $("input[type='number']").inputSpinner();
     </script>
+    <script src="{% static 'js/script.js' %}"></script>
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
