--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -23,14 +23,21 @@
         	 		<a class="nav-link" href="#">Контакты</a>
         	    </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Корзина
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-item">
+                            <table id="table-basket" class="table table-hover">
+                                <tbody>
+                                    <tr>
+
+
+
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                   </div>
                 </li>
             </ul>
