basket model through ajax

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -24,7 +24,7 @@
         	    </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Корзина
+                    Корзина <span id="basket_total_nmb"></span> <span></span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <div class="dropdown-item">
