--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -45,7 +45,7 @@
                 		</li>
                 	</ul>
                 	<div class="card-footer p-1">
-                        <form id = "form_buy_product" class="form-row form-inline justify-content-center">
+                        <form id = "form_buy_product" class="form-row form-inline justify-content-center" action="{% url 'basket_adding' %}">{% csrf_token %}
                             <div class="col-lg-3 my-1">
                                 <label class="sr-only" for="inlineFormInputGroupUsername2">Username</label>
                             <input id="in-buy-product" type="number" class="form-control" placeholder="Шт." min="0" max="99" value="1" required>
