--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -24,17 +24,34 @@
         	    </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Корзина <span id="basket_total_nmb"></span> <span></span>
+                    Корзина <span id="basket_total_nmb">
+                        {% if products_total_nmb %}
+                            ({{ products_total_nmb }})
+                        {% else %}
+                            (0)
+                        {% endif %}
+
+                    </span>
+                    <span></span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <div class="dropdown-item">
                             <table id="table-basket" class="table table-hover">
                                 <tbody>
-                                    <tr>
-
-
-
-                                    </tr>
+                                        {% for product_in_basket in products_in_basket %}
+                                        <tr>
+                                            <td>
+                                                {{ product_in_basket.pb_product.name }}
+                                            </td>
+                                            <td>
+                                             {{ product_in_basket.pb_qty }} шт.
+                                            </td>
+                                            <td>
+                                                по  {{ product_in_basket.pb_price_per_item }} руб.
+                                                <!-- <a class="delete-item" href="" data-product_id="{{ product_in_basket.id }}">X</a> -->
+                                            </td>
+                                        </tr>
+                                        {% endfor %}
                                 </tbody>
                             </table>
                         </div>
