--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -22,21 +22,26 @@
         	    <li class="nav-item">
         	 		<a class="nav-link" href="#">Контакты</a>
         	    </li>
+        	    <li class="nav-item">
+                    <form id="form_cs" class="form-inline" action="{% url 'basket_adding' %}">{% csrf_token %}
+                      <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
+                      <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
+                    </form>
+        	    </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Корзина <span id="basket_total_nmb">
+                    Корзина <span class="basketTotalNmb">
                         {% if products_total_nmb %}
                             ({{ products_total_nmb }})
                         {% else %}
                             (0)
                         {% endif %}
-
                     </span>
                     <span></span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <div class="dropdown-item">
-                            <table id="table-basket" class="table table-hover">
+                            <table class="tableBasket" class="table table-hover">
                                 <tbody>
                                         {% for product_in_basket in products_in_basket %}
                                         <tr>
@@ -48,7 +53,9 @@
                                             </td>
                                             <td>
                                                 по  {{ product_in_basket.pb_price_per_item }} руб.
-                                                <!-- <a class="delete-item" href="" data-product_id="{{ product_in_basket.id }}">X</a> -->
+                                            </td>
+                                            <td>
+                                                <a class="delete-item" href="" data-product_id="{{ product_in_basket.id }}">X</a>
                                             </td>
                                         </tr>
                                         {% endfor %}
