--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -45,21 +45,18 @@
                 		</li>
                 	</ul>
                 	<div class="card-footer p-1">
-                        <form id = "form_buy_product" class="form-row form-inline justify-content-center" action="{% url 'basket_adding' %}">{% csrf_token %}
+                        <form class="formBuyProduct form-row form-inline justify-content-center" action="{% url 'basket_adding' %}">{% csrf_token %}
                             <div class="col-lg-3 my-1">
                                 <label class="sr-only" for="inlineFormInputGroupUsername2">Username</label>
-                            <input id="in-buy-product" type="number" class="form-control" placeholder="Шт." min="0" max="99" value="1" required>
+                            <input type="number" class="inBuyProduct form-control" placeholder="Шт." min="0" max="99" value="1" required>
                             </div>
                             <div class="col-lg-9 my-1">
 
-                            <button id="in-buy-btn" type="submit" class="btn btn-success btn-block" data-product_id="{{ product.id }}" data-product_name="{{ product.name }}"
+                            <button type="submit" class="in-buy-btn btn btn-success btn-block" data-product_id="{{ product.id }}" data-product_name="{{ product.name }}"
                                 data-product_price="{{ product.price }}"
                             >Добавить в корзину.</button>
 
                             </div>
-
-
-
                         </form>
 
 
