--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -17,6 +17,10 @@
   <body>
       <div class="wrapper">
           <div class="wrapper-content">
+              <form id="form_cs" class="form-inline">{% csrf_token %}
+                <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
+                <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
+              </form>
               <!-- header -->
                   {% include "includes/header.html" %}
 
